<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pokedexFragmentDest"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/app_name"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoriteFragmentDest"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/app_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/trainerFragmentDest"
        android:enabled="true"
        android:icon="@drawable/ic_grid"
        android:title="@string/app_trainer"
        app:showAsAction="ifRoom" />
</menu>